--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
     </section>
 
     <section class="footer">
-
+        <p id="develop"></p>
     </section>
-
+<script src="./Js/lofo.js"></script>
 </body>
 </html>
