--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="./Css/RStyleSheet.css">
     <title>Document</title>
 </head>
-<body>
+<body onload="loader()">
+    <div id="loader">
+
+    </div>
+
     <section class="HeaderBlock">
         <header>
             <div><h1 class="logo"><a href="/"></a>Lofo</h1></div>
@@ -15,7 +19,11 @@
                 <ul class="nav">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a>
+                    <ul>
+                        
+                    </ul>
+                    </li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>
             </div>
